Fix shift classes and implement in examples section

--- a/assets/_scss/core/_grid.scss
+++ b/assets/_scss/core/_grid.scss
@@ -33,49 +33,49 @@
     }    
 
     // Shift Classes (adds white space to the left of grid item)
-    .shift-one-half {
+    .usa-shift-one-half {
       @include shift(6);
     }
-    .shift-one-third {
+    .usa-shift-one-third {
       @include shift(4);
     }
-    .shift-two-thirds {
+    .usa-shift-two-thirds {
       @include shift(8);
     }
-    .shift-one-fourth {
+    .usa-shift-one-fourth {
       @include shift(3);
     }
-    .shift-three-fourths {
+    .usa-shift-three-fourths {
       @include shift(9);
     }
-    .shift-one-sixth {
+    .usa-shift-one-sixth {
       @include shift(2);
     }
-    .shift-five-sixths {
+    .usa-shift-five-sixths {
       @include shift(10);
     }
-    .shift-one-twelfth {
+    .usa-shift-one-twelfth {
       @include shift(1);
     }
-    .shift-five-twelfths {
+    .usa-shift-five-twelfths {
       @include shift(5);
     }
-    .shift-seven-twelfths {
+    .usa-shift-seven-twelfths {
       @include shift(7);
     }
-    .shift-eleven-twelfths {
+    .usa-shift-eleven-twelfths {
       @include shift(11);
     }
 
     // Specificies end of a row.
     // Required if grid-box contains multiple rows.
     // Required if browser does not support :last-child
-    .end-row {
+    .usa-end-row {
       @include omega();
     }
 
     // Fixes grid alignment when grid-items have varying heights.
-    .end-row + .grid-item {
+    .usa-end-row + .grid-item {
       clear: left;
     }
   }
